--- a/app/assets/stylesheets/custom.scss
+++ b/app/assets/stylesheets/custom.scss
@@ -1,2 +1,33 @@
-// @import "bootstrap/scss/bootstrap";
-h1 {color: green}
+.center {
+  text-align: center;
+}
+
+.jumbotron {
+  background-image: asset-url('bg.jpg');
+  background-size: cover;
+  height: 300px;
+}
+
+#logo {
+  float: left;
+  font-size: 1.7em;
+  color: #fff;
+  text-transform: uppercase;
+  letter-spacing: -1px;
+  font-weight: bold;
+}
+#logo:hover {
+  color: #fff;
+  text-decoration: none;
+}
+
+.jumbotron h1, h2 {
+  text-align: center;
+  margin-bottom: 30px;
+  letter-spacing: -1px;
+  font-weight: bold;
+}
+
+.btn-xlarge:hover {
+  background-color: #fff;
+}
